convert to yarn

--- a/package.json
+++ b/package.json
@@ -12,21 +12,21 @@
   "type": "module",
   "scripts": {
     "clean:bundle": "rimraf dist && turbo clean:bundle",
-    "clean:node_modules": "pnpx rimraf node_modules && pnpx turbo clean:node_modules",
+    "clean:node_modules": "yarn dlx rimraf node_modules && yarn dlx turbo clean:node_modules",
     "clean:turbo": "rimraf .turbo && turbo clean:turbo",
-    "clean": "pnpm clean:bundle && pnpm clean:turbo && pnpm clean:node_modules",
-    "clean:install": "pnpm clean:node_modules && pnpm install --frozen-lockfile",
+    "clean": "yarn clean:bundle && yarn clean:turbo && yarn clean:node_modules",
+    "clean:install": "yarn clean:node_modules && yarn install --frozen-lockfile",
     "type-check": "turbo type-check",
-    "base-build": "pnpm clean:bundle && turbo build",
-    "build": "pnpm set-global-env && pnpm base-build",
-    "build:firefox": "pnpm set-global-env CLI_CEB_FIREFOX=true && pnpm base-build",
-    "base-dev": "pnpm clean:bundle && turbo ready && turbo watch dev",
-    "dev": "pnpm set-global-env CLI_CEB_DEV=true && pnpm base-dev",
-    "dev:firefox": "pnpm set-global-env CLI_CEB_DEV=true CLI_CEB_FIREFOX=true && pnpm base-dev",
-    "zip": "pnpm build && pnpm -F zipper zip",
-    "zip:firefox": "pnpm build:firefox && pnpm -F zipper zip",
-    "e2e": "pnpm zip && turbo e2e",
-    "e2e:firefox": "pnpm zip:firefox && turbo e2e",
+    "base-build": "yarn clean:bundle && turbo build",
+    "build": "yarn set-global-env && yarn base-build",
+    "build:firefox": "yarn set-global-env CLI_CEB_FIREFOX=true && yarn base-build",
+    "base-dev": "yarn clean:bundle && turbo ready && turbo watch dev",
+    "dev": "yarn set-global-env CLI_CEB_DEV=true && yarn base-dev",
+    "dev:firefox": "yarn set-global-env CLI_CEB_DEV=true CLI_CEB_FIREFOX=true && yarn base-dev",
+    "zip": "yarn build && yarn workspace zipper zip",
+    "zip:firefox": "yarn build:firefox && yarn workspace zipper zip",
+    "e2e": "yarn zip && turbo e2e",
+    "e2e:firefox": "yarn zip:firefox && turbo e2e",
     "lint": "turbo lint --continue",
     "lint:fix": "turbo lint:fix --continue",
     "format": "turbo format --continue -- --cache --cache-location node_modules/.cache/.prettiercache",
@@ -34,8 +34,8 @@
     "update-version": "bash bash-scripts/update_version.sh",
     "copy-env": "bash bash-scripts/copy_env.sh",
     "set-global-env": "bash bash-scripts/set_global_env.sh",
-    "module-manager": "pnpm -F module-manager start",
-    "postinstall": "pnpm copy-env"
+    "module-manager": "yarn workspace module-manager start",
+    "postinstall": "yarn copy-env"
   },
   "dependencies": {
     "react": "^19.1.0",
@@ -90,7 +90,13 @@
       "eslint --fix"
     ]
   },
-  "packageManager": "pnpm@10.11.0",
+  "packageManager": "yarn@4.5.3",
+  "workspaces": [
+    "chrome-extension",
+    "pages/*",
+    "packages/*",
+    "tests/*"
+  ],
   "engines": {
     "node": ">=22.15.1"
   }
