--- a/packages/hmr/package.json
+++ b/packages/hmr/package.json
@@ -11,14 +11,14 @@
   "types": "index.mts",
   "main": "dist/index.mjs",
   "scripts": {
-    "clean:bundle": "rimraf dist && pnpx rimraf build",
-    "clean:node_modules": "pnpx rimraf node_modules",
+    "clean:bundle": "rimraf dist && yarn dlx rimraf build",
+    "clean:node_modules": "yarn dlx rimraf node_modules",
     "clean:turbo": "rimraf .turbo",
-    "clean": "pnpm clean:bundle && pnpm clean:node_modules && pnpm clean:turbo",
+    "clean": "yarn clean:bundle && yarn clean:node_modules && yarn clean:turbo",
     "ready": "tsc -b && rollup --config dist/rollup.config.js",
     "dev": "tsx lib/initializers/init-reload-server.ts",
     "lint": "eslint .",
-    "lint:fix": "pnpm lint --fix",
+    "lint:fix": "yarn lint --fix",
     "format": "prettier . --write --ignore-path ../../.prettierignore",
     "type-check": "tsc --noEmit"
   },
