--- a/packages/module-manager/package.json
+++ b/packages/module-manager/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "tsx index.mts",
     "lint": "eslint .",
-    "lint:fix": "pnpm lint --fix",
+    "lint:fix": "yarn lint --fix",
     "format": "prettier . --write --ignore-path ../../.prettierignore"
   },
   "devDependencies": {
