--- a/packages/zipper/package.json
+++ b/packages/zipper/package.json
@@ -12,19 +12,19 @@
   "main": "dist/index.mjs",
   "scripts": {
     "clean:bundle": "rimraf dist",
-    "clean:node_modules": "pnpx rimraf node_modules",
+    "clean:node_modules": "yarn dlx rimraf node_modules",
     "clean:turbo": "rimraf .turbo",
-    "clean": "pnpm clean:bundle && pnpm clean:node_modules && pnpm clean:turbo",
+    "clean": "yarn clean:bundle && yarn clean:node_modules && yarn clean:turbo",
     "zip": "node --env-file=../../.env dist/index.mjs",
     "lint": "eslint .",
     "ready": "tsc -b",
-    "lint:fix": "pnpm lint --fix",
+    "lint:fix": "yarn lint --fix",
     "format": "prettier . --write --ignore-path ../../.prettierignore",
     "type-check": "tsc --noEmit"
   },
   "devDependencies": {
-    "@extension/tsconfig": "workspace:*",
     "@extension/dev-utils": "workspace:*",
-    "@extension/env": "workspace:*"
+    "@extension/env": "workspace:*",
+    "@extension/tsconfig": "workspace:*"
   }
 }
