--- a/pages/content-ui/package.json
+++ b/pages/content-ui/package.json
@@ -10,21 +10,21 @@
   ],
   "scripts": {
     "clean:bundle": "rimraf dist",
-    "clean:node_modules": "pnpx rimraf node_modules",
+    "clean:node_modules": "yarn dlx rimraf node_modules",
     "clean:turbo": "rimraf .turbo",
-    "clean": "pnpm clean:bundle && pnpm clean:node_modules && pnpm clean:turbo",
+    "clean": "yarn clean:bundle && yarn clean:node_modules && yarn clean:turbo",
     "build": "tsx build.mts",
     "dev": "tsx build.mts",
     "lint": "eslint .",
-    "lint:fix": "pnpm lint --fix",
+    "lint:fix": "yarn lint --fix",
     "format": "prettier . --write --ignore-path ../../.prettierignore",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@extension/shared": "workspace:*",
-    "@extension/ui": "workspace:*",
+    "@extension/env": "workspace:*",
     "@extension/i18n": "workspace:*",
-    "@extension/env": "workspace:*"
+    "@extension/shared": "workspace:*",
+    "@extension/ui": "workspace:*"
   },
   "devDependencies": {
     "@extension/hmr": "workspace:*",
